# Capture-

./: Capture.7z  Capture.sln  README.md
Capture/: AudioCapture.h  CMakeLists.txt  Capture.cpp  Capture.rc  Capture.vcxproj  Capture.vcxproj.filters  DiskWriter.h  FrameCapture.h  GPUDetector.h  HardwareEncoder.h  RecordingEngine.h  RecordingPipeline.h  Resource.h  USBAudioCapture.h  VirtualDisplayManager.h  main.cpp  usb.h  usbcapture.h  util.cpp
